--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-lg-row flex-column justify-content-between">
     <div class="cabecalho">
-        <h1 class="mr-3">Diagrama de Ishikawa e 5 Porquês</h1>
+        <h1 class="mr-3">Diagrama de Ishikawa</h1>
         <p>
             Descreva o problema referente aos respectivos campos de acordo com o Diagrama de Causa e Efeito - Ishikawa.
         </p>
