--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
@@ -1,5 +1,5 @@
 <div class="cabecalho">
-    <h1 class="mr-3">Plano de Ações e Notificação</h1>
+    <h1 class="mr-3">Plano de Ações</h1>
     <p>
         Descreva o cronograma de atividades de ações corretivas da proposição.
     </p>
