--- a/src/app/pages/ncs/about/costs/costs.component.html
+++ b/src/app/pages/ncs/about/costs/costs.component.html
@@ -29,7 +29,7 @@
                 <th>Documento</th>
                 <th>Data de Anexo</th>
                 <th>Anexado Por</th>
-                <th>Valor</th>
+                <th>Valor Total</th>
                 <th></th>
             </tr>
         </ng-template>
@@ -102,7 +102,7 @@
                 >
                     <input
                             type="file"
-                            accept=".pdf"
+                           
                             class="input-attachment"
                             (change)="onUpload($event)"
                             required
