recuperar senha e validações

--- a/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
@@ -25,7 +25,7 @@
 
 
     <div class="d-flex flex-column inputs-sm  col-5" >
-      <label for="tipos_auditoria_item">Segmento de Auditoria *</label>
+      <label for="tipos_auditoria_item">Segmento de Auditoria</label>
       <input
               formControlName="tipos_auditoria_item"
               name="tipos_auditoria_item"
