esboço gráfico ncs no tempo

--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
@@ -1,7 +1,7 @@
 <div class="cabecalho">
   <p>Os campos marcados com asterisco (*) são de preenchimento
     obrigatório</p>
-  <h1>Não Conformidade *</h1>
+  <h1>Descrição da NC *</h1>
   <p>
     Informe abaixo os detalhes da não conformidade
   </p>
