--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
@@ -25,7 +25,7 @@
 
 
 <div class="input-box mt-3" *ngIf="returnPrScreen() || returnNfScreen()">
-  <label class="mb-2 mt-3">Anexar Documentos *</label>
+  <label class="mb-2 mt-3">Anexar Documentos </label>
   <div class="div-attachment">
     <h1>Envie seus documentos</h1>
     <div
