--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -251,7 +251,7 @@
                             </ng-template>
                             <ng-template pTemplate="body" let-contact let-i="rowIndex">
                                 <tr>
-                                    <td>{{ contact['username'] }}</td>
+                                    <td>{{ contact['name'] }}</td>
                                     <td>{{ contact.email }}</td>
                                     <td>{{ contact.type }}</td>
                                 </tr>
