--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.css
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.css
@@ -17,12 +17,14 @@
     border-radius: 5px;
     padding: 8px;
     height: 252px;
+    min-width: 250px;
+  
     text-align: center;
     background-color: rgb(243, 243, 243);
 }
 .div-attachment h1 {
     margin-top: 5px;
-    font-size: 25px;
+    font-size: 20px;
     color: rgb(89, 89, 89);
 
 }
@@ -49,11 +51,13 @@
 }
 
 .white-background p{
-    position: absolute;
-    margin-top: 100px;
-    font-size: 12px;color: rgb(89, 89, 89);
+    
+
+    font-size: 12px;
+    color: rgb(89, 89, 89);
     color: gray;
     text-align: center;
+ 
 }
 .white-background-files button{
     background-color: white;
@@ -61,16 +65,18 @@
     width: 40px;
     font-size: 14px;
     outline: none;
+   
 }
 .white-background-files p {
     font-size: 12px;
     color: rgb(89, 89, 89);
     color: gray;
+   
 }
 
 
 .white-background i{
-    position: absolute;
+ 
     font-size: 30px;
     color: rgb(89, 89, 89);
     font-size: 60px;
@@ -87,5 +93,12 @@
     height: 100%;
     width: 100%;
     opacity: 0;
-    z-index: 3;
+    z-index: 1;
+
+}
+
+.teste{
+    height: 100%;
+    position: absolute;
+    z-index: 2;
 }
