--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -5,7 +5,7 @@
     </p>
 </div>
 
-<div class="d-flex flex-column flex-lg-row justify-content-between mt-4">
+<div class="d-flex flex-row flex-wrap justify-content-between mt-4">
     <div class="">
         <p-editor
                 [style]="{ height: '210px', width: '700px' }"
@@ -16,7 +16,7 @@
     </div>
 
     <div class="div-attachment">
-        <h1>Anexar relatório de custos</h1>
+        <h1>Anexar evidência da solução do problema</h1>
         <div
                 class="white-background"
                 *ngIf="sgqServ.sgq.attachments.length == 0"
@@ -26,12 +26,15 @@
                     accept=".pdf,image/jpeg,image/png,xlsx,xls"
                     class="input-attachment"
                     (change)="onUpload($event)"
+                    
                     multiple
             />
-            <i class="pi pi-cloud-upload"></i>
+           <div class="d-flex flex-column justify-content-center align-items-center teste">
+             <i class="pi pi-cloud-upload"></i>
             <p>
                 Arraste e solte ou <strong>navegue para escolher</strong> um arquivo
             </p>
+           </div>
         </div>
         <div
                 class="white-background-files"
