--- a/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="px-5">
                   <span class="auto-complete-label">TIPO DE CONTATO</span><br />
-                  <span class="auto-complete-item">{{ contact.ctype }}</span>
+                  <span class="auto-complete-item">{{ contact.type }}</span>
                 </div>
               </div>
             </div>
@@ -118,7 +118,7 @@
           <tr>
             <td>{{ contact.name }}</td>
             <td>{{ contact.email }}</td>
-            <td>{{ contact.cType }}</td>
+            <td>{{ contact.type }}</td>
             <td>
               <button
                 pButton
