--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
@@ -46,8 +46,7 @@
                   <span class="auto-complete-item">{{ brand.rev }}</span>
                 </div>
               </div>
-            </div></ng-template
-          >
+            </div></ng-template>
         </p-autoComplete>
       </div>
     </div>
