--- a/src/app/pages/ncs/import-json/import-json.component.html
+++ b/src/app/pages/ncs/import-json/import-json.component.html
@@ -1,5 +1,5 @@
 
-<button class="btn btn-dark inicio">Inicio</button>
+<button class="btn btn-dark inicio mt-3" routerLink="/ncs">Inicio</button>
 
 <h1 class="mt-4">Importar Clientes</h1>
 <p-fileUpload
