--- a/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
+++ b/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
@@ -63,7 +63,7 @@
                 <i class="bi bi-arrows-collapse"></i>
                 Colapsar Todos
             </button>
-            <button class="btn btn-dark btn ml-3">
+            <button class="btn btn-dark btn ml-3" routerLink="../../sgq/{{id}}">
                 Editar Avaliação
                 <i class="bi bi-pencil-square"></i>
             </button>
