--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -32,7 +32,7 @@
             </div>
             <div class="col">
                 <label>Método</label>
-                <p-editor [ngModel]="this.propService.propSolution.method_description" [style]="editorStyle" [readonly]="true" (click)="openDialog(3)">
+                <p-editor [ngModel]="this.propService.propSolution.method_description + '<p>' + returnString(this.propService.propSolution.instruction) + '</p>'+ '<p>' + returnString(this.propService.propSolution.procedure) + '</p>'+ '<p>' + returnString(this.propService.propSolution.regulatory) + '</p>'+ '<p>' + returnString(this.propService.propSolution.nbr) + '</p>'" [style]="editorStyle" [readonly]="true" (click)="openDialog(3)">
                     <ng-template pTemplate="header">
                     </ng-template>
                 </p-editor>
