--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
@@ -67,6 +67,26 @@
                         [inputStyle]="{ width: '100%' }"
                         class="p-autocomplete mr-5"
                 >
+
+                    <ng-template let-brand pTemplate="item">
+                        <div>
+                            <div class="d-flex">
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">CÓDIGO</span><br />
+                                    <span class="auto-complete-item">{{ brand.code }}</span>
+                                </div>
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">DESCRIÇÃO</span><br />
+                                    <span class="auto-complete-item">{{
+                                        brand.description
+                                        }}</span>
+                                </div>
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">REVISÃO</span><br />
+                                    <span class="auto-complete-item">{{ brand.rev }}</span>
+                                </div>
+                            </div>
+                        </div></ng-template>
                 </p-autoComplete>
 
             </div>
@@ -82,6 +102,25 @@
                         [inputStyle]="{ width: '100%' }"
                         class="p-autocomplete mr-5"
                 >
+                    <ng-template let-brand pTemplate="item">
+                        <div>
+                            <div class="d-flex">
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">CÓDIGO</span><br />
+                                    <span class="auto-complete-item">{{ brand.code }}</span>
+                                </div>
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">DESCRIÇÃO</span><br />
+                                    <span class="auto-complete-item">{{
+                                        brand.description
+                                        }}</span>
+                                </div>
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">REVISÃO</span><br />
+                                    <span class="auto-complete-item">{{ brand.rev }}</span>
+                                </div>
+                            </div>
+                        </div></ng-template>
                 </p-autoComplete>
             </div>
         </div>
@@ -98,6 +137,21 @@
                         [inputStyle]="{ width: '100%' }"
                         class="p-autocomplete mr-5"
                 >
+                    <ng-template let-brand pTemplate="item">
+                        <div>
+                            <div class="d-flex">
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">CÓDIGO</span><br />
+                                    <span class="auto-complete-item">{{ brand.code }}</span>
+                                </div>
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">DESCRIÇÃO</span><br />
+                                    <span class="auto-complete-item">{{
+                                        brand.description
+                                        }}</span>
+                                </div>
+                            </div>
+                        </div></ng-template>
                 </p-autoComplete>
 
             </div>
@@ -113,6 +167,21 @@
                         [inputStyle]="{ width: '100%' }"
                         class="p-autocomplete mr-5"
                 >
+                    <ng-template let-brand pTemplate="item">
+                        <div>
+                            <div class="d-flex">
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">CÓDIGO</span><br />
+                                    <span class="auto-complete-item">{{ brand.code }}</span>
+                                </div>
+                                <div class="mr-2">
+                                    <span class="auto-complete-label">DESCRIÇÃO</span><br />
+                                    <span class="auto-complete-item">{{
+                                        brand.description
+                                        }}</span>
+                                </div>
+                            </div>
+                        </div></ng-template>
                 </p-autoComplete>
             </div>
         </div>
