--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
@@ -24,7 +24,7 @@
           (ngModelChange)="onChange()"
           (completeMethod)="searchIt($event)"
           (onSelect)="onSelectedIt()"
-          field="description"
+          field="descriptionAux"
           [(ngModel)]="nonComplianceService.autoCompleteItValue"
           placeholder="Busque por nome, número ou descrição"
         >
