gráfico de linha da listagem de ncs

--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -192,7 +192,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
         >
       </ngx-charts-pie-chart>
 
-      <!-- <ngx-charts-line-chart
+      <ngx-charts-line-chart
         [view]="lineChartView"
         [scheme]="gridColor"
         [legend]="lineChartLegend"
@@ -207,7 +207,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
         [legendPosition]="legendPosition"
         [legendTitle]="legendTitle"
         >
-      </ngx-charts-line-chart> -->
+      </ngx-charts-line-chart>
     </div>
   </div>
 </div>
