--- a/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
+++ b/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
@@ -73,7 +73,7 @@
 </div>
 <div class="div-ident-parceiro mt-3">
   <h1 class="titulo-parceiro">Dados do Parceiro</h1>
-  <div class="d-flex">
+  <div class="d-flex flex-wrap">
     <div class="item">
       <div class="dados-parceiro razao-social">
         <div class="d-flex">
