--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
@@ -45,11 +45,11 @@
   <div class="content-create-nc" id="pdfContent">
     <div *ngIf="stepPosition === 0">
       <app-identificacao-da-nc></app-identificacao-da-nc>
-      <div class="d-flex">
-        <div class="col-6">
+      <div class="d-flex flex-row flex-wrap">
+        <div class="col-xl-6">
           <app-parceiro></app-parceiro>
         </div>
-        <div >
+        <div class="col-xl-6">
           <app-product></app-product>
         </div>
       </div>
