--- a/src/app/pages/ncs/about/view-nc/view-nc.component.html
+++ b/src/app/pages/ncs/about/view-nc/view-nc.component.html
@@ -56,7 +56,7 @@
       </div>
     </ng-template>
     <ng-template pTemplate="content">
-      <div class="div-ident-parceiro d-flex flex-column flex-lg-row mt-3">
+      <div class="div-ident-parceiro d-flex flex-wrap mt-3">
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2">
             <i class="bi bi-file-earmark-text"></i>
@@ -92,7 +92,7 @@
         </div>
       </div>
 
-      <div class="div-ident-parceiro d-flex  mt-3">
+      <div class="div-ident-parceiro d-flex flex-wrap mt-3">
   <div class="dados-parceiro razao-social item">
     <h2 class="mr-2">
       <i class="bi bi-geo"></i>
