--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -4,7 +4,7 @@
       <h1>Dados do Produto *</h1>
       <p>
         Identifique o produto desta NC.
-        <br>
+        <br />
         Caso não encontre o produto, atualize a base de cadastros.
       </p>
     </div>
@@ -13,11 +13,7 @@
         <i class="pi pi-history"></i> ultima atualização:
         {{ returnUpdateTime() }}
       </p>
-      <a      target="_blank"
-              href="ncs/import"
-              role="button"
-              class="btn btn-dark"
-      >
+      <a target="_blank" href="ncs/import" role="button" class="btn btn-dark">
         Atualizar Cadastros
         <i class="pi pi-download" id="icon-button"></i>
       </a>
@@ -26,16 +22,16 @@
 </div>
 <div class="p-fluid autoComplete">
   <p-autoComplete
-          [(ngModel)]="nonComplicanceService.autoCompleteValue"
-          [suggestions]="results"
-          (completeMethod)="getFilteredList($event)"
-          class="p-autocomplete"
-          [style]="{ width: '100%' }"
-          [inputStyle]="{ width: '100%' }"
-          placeholder="Busque por nome, descrição ou código SAP"
-          field="name"
-          (onSelect)="checkProduct($event)"
-          (input)="uncheckProduct()"
+    [(ngModel)]="nonComplicanceService.autoCompleteValue"
+    [suggestions]="results"
+    (completeMethod)="getFilteredList($event)"
+    class="p-autocomplete"
+    [style]="{ width: '100%' }"
+    [inputStyle]="{ width: '100%' }"
+    placeholder="Busque por nome, descrição ou código SAP"
+    field="name"
+    (onSelect)="checkProduct($event)"
+    (input)="uncheckProduct()"
   >
     <ng-template let-product pTemplate="item">
       <div class="autoComplete-item">
