--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -226,7 +226,7 @@
                             <ng-template pTemplate="body" let-action>
                                 <tr>
                                     <td>{{ action.description }}</td>
-                                    <td>{{ action.responsible.username }}</td>
+                                    <td>{{ action.responsible.name }}</td>
                                    <td>{{dataParse(action.term)}}</td>
                                     <td>{{ action.status }}</td>
                                 </tr>
