--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
@@ -70,7 +70,7 @@
             <tr>
                 <td>{{ action.description }}</td>
                 <td>{{ action.responsible.name }}</td>
-                <td>{{ action.term.split("-")?.reverse()?.join("/") }}</td>
+                <td>{{ dataParse(action.term) }}</td>
                 <td>{{ action.status }}</td>
                 <td>
                     <button
