--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
@@ -6,15 +6,15 @@
         <p>Quando ocorre falta/excesso de insumos ou estes são de má qualidade.</p>
 
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.lack_materials" value="Falta de Insumos"></p-checkbox>
+            <p-checkbox [(ngModel)]="this.propService.checkBoxes" value="Falta de Insumos"></p-checkbox>
             <label class="form-check-label ml-1">Falta de Insumos</label>
         </div>
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.excess_materials" value="Excesso de Insumos"></p-checkbox>
+            <p-checkbox [(ngModel)]="propService.checkBoxes" value="Excesso de Insumos"></p-checkbox>
             <label class="form-check-label ml-1">Excesso de Insumos</label>
         </div>
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.low_quality_materials" value="Matéria prima de má qualidade"></p-checkbox>
+            <p-checkbox [(ngModel)]="propService.checkBoxes" value="Matéria prima de má qualidade"></p-checkbox>
             <label class="form-check-label ml-1">Matéria prima de má qualidade</label>
         </div>
         <p class="my-3 fw-bold fs-6">Acrescente e detalhe abaixo outras informações pertinentes:</p>
@@ -29,15 +29,15 @@
         <p>Quando há erros, falta ou excesso de parâmetros de inspeção, não atingimento de metas ou outras informações de medição.</p>
 
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.lack_parameters" value="Falta de Parâmetros"></p-checkbox>
+            <p-checkbox [(ngModel)]="propService.checkBoxes" value="Falta de Parâmetros"></p-checkbox>
             <label class="form-check-label ml-1">Falta de Parâmetros</label>
         </div>
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.excess_parameters" value="Excesso de Parâmetros"></p-checkbox>
+            <p-checkbox [(ngModel)]="propService.checkBoxes" value="Excesso de Parâmetros"></p-checkbox>
             <label class="form-check-label ml-1">Excesso de Parâmetros</label>
         </div>
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.non_achievement_goals" value="Não atingimento de metas"></p-checkbox>
+            <p-checkbox [(ngModel)]="propService.checkBoxes" value="Não atingimento de metas"></p-checkbox>
             <label class="form-check-label ml-1">Não atingimento de metas</label>
         </div>
         <p class="my-3 fw-bold fs-6">Acrescente e detalhe abaixo outras informações pertinentes:</p>
@@ -192,7 +192,7 @@
         </h1>
         <p>Quando o colaborador desrespeita procedimentos, desconhece a maneira correta de executar o trabalho (falta de treinamento), ou o faz de maneira inadequada (com pressa, imprudência, etc) ou descompromissada (falta de responsabilidade, motivação, etc).</p>
         <div class="form-check pl-0 my-2">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.run_training" value="Executar treinamento"></p-checkbox>
+            <p-checkbox [(ngModel)]="propService.checkBoxes" value="Executar treinamento"></p-checkbox>
             <label class="form-check-label ml-1">Executar treinamento</label>
         </div>
         <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.man_power_description" [modules]="{counter: {container: '#counter4',unit: 'character'}}">
