--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.css
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.css
@@ -10,6 +10,19 @@
     font-size: 15px;
     color: gray;
 }
+
+input {
+    outline: none;
+    background-color: white;
+    border-radius: 5px;
+    border: 2px solid rgb(51, 51, 51);
+    padding-left: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    width: 100%;
+    font-size: 14px;
+}
 .div-attachment {
     outline: none;
     overflow: hidden;
@@ -17,14 +30,22 @@
     border-radius: 5px;
     padding: 8px;
     height: 252px;
-    min-width: 250px;
-  
     text-align: center;
     background-color: rgb(243, 243, 243);
 }
+
+.col-attachment {
+    min-width: 400px;
+}
+
+.col-editor {
+    min-width: 650px;
+    min-height: 210px;
+}
+
 .div-attachment h1 {
     margin-top: 5px;
-    font-size: 20px;
+    font-size: 25px;
     color: rgb(89, 89, 89);
 
 }
@@ -50,55 +71,45 @@
     border-radius: 7px;
 }
 
-.white-background p{
-    
-
+.white-background p {
+    position: absolute;
+    margin-top: 100px;
     font-size: 12px;
     color: rgb(89, 89, 89);
     color: gray;
     text-align: center;
- 
 }
-.white-background-files button{
+
+.white-background-files button {
     background-color: white;
     border: none;
     width: 40px;
     font-size: 14px;
     outline: none;
-   
 }
+
 .white-background-files p {
     font-size: 12px;
     color: rgb(89, 89, 89);
     color: gray;
-   
 }
 
 
-.white-background i{
- 
+.white-background i {
+    position: absolute;
     font-size: 30px;
     color: rgb(89, 89, 89);
     font-size: 60px;
 }
 
 .white-background-files i {
-
     font-size: 17px;
     color: rgb(89, 89, 89);
-
 }
 
-.input-attachment{
+.input-attachment {
     height: 100%;
     width: 100%;
     opacity: 0;
-    z-index: 1;
-
-}
-
-.teste{
-    height: 100%;
-    position: absolute;
-    z-index: 2;
+    z-index: 3;
 }
