--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -192,7 +192,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
         >
       </ngx-charts-pie-chart>
 
-      <ngx-charts-line-chart
+      <ngx-charts-bar-vertical-2d
         [view]="lineChartView"
         [scheme]="gridColor"
         [legend]="lineChartLegend"
@@ -202,12 +202,11 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
         [yAxis]="lineChartYAxis"
         [xAxisLabel]="lineChartXAxisLabel"
         [yAxisLabel]="lineChartYAxisLabel"
-        [timeline]="lineChartTimeline"
         [results]="lineChartData"
         [legendPosition]="legendPosition"
         [legendTitle]="legendTitle"
         >
-      </ngx-charts-line-chart>
+      </ngx-charts-bar-vertical-2d>
     </div>
   </div>
 </div>
