--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -271,7 +271,7 @@
 
 
 
-<div *ngIf="!aboutService.hasProposal()">
+<div *ngIf="false">
     <div class="d-flex flex-lg-row flex-column justify-content-between">
         <div class="d-flex">
             <div class="cabecalho">
